# Atom-Engine

./: CMakeLists.txt  Requirements.txt  readme.txt  vcpkg.json
Juego/: CMakeLists.txt
Juego/include/: AtomEngine.h
Juego/src/: Pajaro.cpp  flappy.cpp  main.cpp
include/: AtomEngine.h  AtomMath.h
src/OpenGL/: window.cpp
src/SFML/: window.cpp
src/core/: Atom.cpp  Atom2D.cpp  Game.cpp  SceneManager.cpp  Spr2D.cpp
